# job-graph

./: .env.template  .gitignore  .justfile  README.md  docker-compose.yml  download.sh  gis-entrypoint.sh  gis-postgresql.conf  graphhopper-config.yaml  import.sh  install_gdal.bat  photon.Dockerfile  postgresql.conf
backend/: api_schema.json  db.sqlite3  install_gdal.bat  manage.py  pyproject.toml
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  api.py  models.py  schemas.py  tasks.py
backend/core/management/commands/: geocode.py  run_scraper.py
backend/core/migrations/: 0001_initial.py  0002_jobopening_raw_data.py  0003_jobopening_home_office.py  0004_rename_first_seen_date_jobopening_first_seen_at_and_more.py  0005_jobopening_platform_id.py  0006_alter_jobopening_raw_data.py  0007_remove_jobopening_urls_jobopening_url_application_and_more.py  0008_alter_jobopening_location.py  0009_rename_workplace_city_jobopening_city_and_more.py
backend/core/scraper/: __init__.py  ostjob_scraper.py
data/graphhopper/: graphhopper-config.yaml
data/graphhopper/models/: ebike.json  fast_ebike.json
docker/: graphhopper-entrypoint.sh  graphhopper.Dockerfile  photon-entrypoint.sh  photon.Dockerfile  postgis.Dockerfile
docker/certs/: zscaler-chain.pem.crt
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: runtime.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: JobTooltip.vue  NiceMap.vue  PlaceSearchItem.vue
(+21 files in other folders)
