[project]
name = "job-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-lru==2.0.5",
    "daphne==4.2.1",
    "django==5.2.6",
    "django-click==2.4.1",
    "django-cors-headers==4.9.0",
    "django-ninja==1.4.3",
    "django-tasks==0.8.1",
    "gdal>=3.11.4",
    "httpx==0.28.1",
    "psycopg[binary,pool]>=3.2.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff==0.13.1",
    "taskipy==1.14.1",
]

[tool.taskipy.tasks]
export_openapi_schema = "python manage.py export_openapi_schema --indent 4 --sorted --output api_schema.json"

[tool.ruff]
target-version = "py313"
show-fixes = true
line-length = 120
indent-width = 4
fix = true

[tool.ruff.lint]
dummy-variable-rgx = "^request$"
